[package]
name = "runaway_zeppelin_2"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.2"
bevy-inspector-egui = "0.35.0"
bevy_water = "0.17.0"
chrono = "0.4.42"
leafwing-input-manager = "0.18.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
